fixing overflow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    width: 100vw;
+    max-width: 100vw;
     overflow: hidden;
 }
 
@@ -17,10 +17,16 @@ h1.title-api-documentation {
 }
 
 .content {
+    max-width: 100vw;
+    width: 100vw;
+    overflow: hidden;
     padding: 5rem 15rem;
 }
 
 .script-box {
+    max-width: 100vw;
+    width: 100vw;
+    overflow: hidden;
     background-color: #272822;
     border-radius: 5px;
     padding: 1rem;
@@ -29,6 +35,9 @@ h1.title-api-documentation {
 }
 
 pre {
+    max-width: 100vw;
+    width: 100vw;
+    overflow: hidden;
     color: #fff;
     font-weight: 600;
     line-height: 27px;
